# revus

./: .gitignore  MIT-LICENSE  Makefile  README.md  auto_review.py  code_review.py  config.toml  git_operations.py  judge_review.py  main.py  pyproject.toml  revus-frontend.code-workspace  revus.toml  setup.py  shared_llm.py
.github/workflows/: python-publish.yml
app/: assess_review_quality.py  cli.py  code_review.py  code_reviewer.py  config.py  git_operations.py  judge_review.py  llm_client.py  review_assessor.py  review_manager.py  shared_llm.py  utils.py
cli/: auto_review.py
frontend/: .prettierrc.json  Makefile  eslint.config.js  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  index.module.css
frontend/src/api/: index.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/Form/: index.tsx
frontend/src/components/Pages/Main/Form/: index.module.css  index.tsx
frontend/src/components/shared/: FileUploadField.module.css  FileUploadField.tsx  FormComponent.module.css  FormComponent.tsx
frontend/src/utils/: api.ts  error.ts  rollbar.ts
revus/: main.py  run_api.py
revus/app/: api.py  cli.py  code_reviewer.py  config.py  file_reader.py  git_operations.py  llm_client.py  logger.py  review_assessor.py  review_executor.py  review_manager.py  utils.py
