[tool.poetry]
name = "revus"
version = "0.0.1"
description = "Automated PR Review Application using LLM"
readme = "README.md"
authors = ["Sergei Masiutin <sergeimasiutin@gmail.com>"]
license = "MIT"
packages = [
  { include = "revus" },
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
repository = "https://github.com/sudobooo/revus"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
gitpython = "^3.1.43"
openai = "^1.52.0"
langchain = "^0.3"
langchain-openai = "^0.2.3"
rich = "^13.5.2"
python-dotenv = "^1.0.0"
toml = "^0.10.2"

[tool.poetry.scripts]
revus = "revus.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "B",    # bugbear
    "A",    # flake8-annotations
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501", # ignore long lines (>88 characters)
    "E712", # allow 'if x == False'
]